--- a/css/index.css
+++ b/css/index.css
@@ -6,27 +6,10 @@
     cursor: default;
 }
 
-input, button, textarea, :focus {
+input, button, textarea :focus {
     outline: none;
 }
 
-#menu {
-    border-right-style: solid;
-    border-right-color: gray;
+section {
     min-height: 100vh;
-}
-
-#menu ul {
-    padding-top: 2vh;
-}
-
-#menu ul li {
-    border-bottom-style: solid;
-    border-bottom-color: lightgray;
-    border-bottom-width: 1px;
-}
-
-#content div {
-    text-align: center;
-    padding-top: 2vh;
 }
